force-app/main/default/objects/ProjectInvoiceLineItem__c/ProjectInvoiceLineItem__c.object-meta.xml
<CustomObject>
    <label>Project Invoice Line Item</label>
    <nameField>
        <displayFormat>INVLI-{000000000}</displayFormat>
        <label>Project Invoice Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>