force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/LawsonDivision__c.field-meta.xml
<CustomField>
    <fullName>LawsonDivision__c</fullName>
    <label>Lawson Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4155</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>