force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/LawsonSubAccount2__c.field-meta.xml
<CustomField>
    <fullName>LawsonSubAccount2__c</fullName>
    <label>Lawson Sub Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>