force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/TotalLineItemDetailAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalLineItemDetailAmount__c</fullName>
    <label>Total Line Item Detail Amount</label>
    <summarizedField>ProjectInvoiceLineItemDetail__c.Rate__c</summarizedField>
    <summaryForeignKey>ProjectInvoiceLineItemDetail__c.ProjectInvoiceLineItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>